--- a/Nivel2-B/Documentos/Guia/guia5.tex
+++ b/Nivel2-B/Documentos/Guia/guia5.tex
@@ -1,6 +1,6 @@
 \chapter{Detección de áreas inundadas}
 
-Esta clase tiene como objetivo aplicar los conceptos vistos en el curso para la detección se espejos de agua utilizando imagenes \emph{Sentinel 1}. Para esto estudiaremos las inundaciones de octubre de 2017 en la zona de Chascomus, provincia de Buenos Aires, Argentina.
+Esta clase tiene como objetivo aplicar los conceptos estudiados durante el curso, para la detección se espejos de agua, utilizando imágenes \emph{Sentinel 1}. Se trabajrá con las inundaciones de octubre de 2017 en la zona de Chascomús, provincia de Buenos Aires, Argentina.
 
 % Imagen antes
 % S1B_IW_GRDH_1SDV_20171007T090618_20171007T090643_007721_00DA33_E6D1
@@ -11,15 +11,15 @@ Esta clase tiene como objetivo aplicar los conceptos vistos en el curso para la 
 % S = -35.933
 % E = -58.569
 
-\section{Actividad}
+\section{Actividades}
 
 \begin{que}
     Descargue la imagen del 10 de octubre del 2017
-    \begin{center}\path{ S1B_IW_GRDH_1SDV_20171007T090618_20171007T090643_007721_00DA33_E6D1}\end{center} del \href{https://vertex.daac.asf.alaska.edu/}{Alaska Satellite Facility}. Utilice la busqueda por \emph{Granule} en lugar de la \emph{Geospatial}.
+    \begin{center}\path{ S1B_IW_GRDH_1SDV_20171007T090618_20171007T090643_007721_00DA33_E6D1}\end{center} del \href{https://vertex.daac.asf.alaska.edu/}{Alaska Satellite Facility}. Utilice la búsqueda por \emph{Granule} en lugar de la \emph{Geospatial}.
 \end{que}
 
 \begin{que}
-    Utilizando la herramienta \menu{Raster>Subset} (Figura \ref{fig:coordenadas}) haga un recorte entre las coordenadas geográficas
+    Con la herramienta \menu{Raster>Subset} (Figura \ref{fig:coordenadas}) haga un recorte entre las coordenadas geográficas
     \begin{figure}[h!]
         \centering
         \includegraphics[scale=0.4]{fig:coordenadas.png}
@@ -37,23 +37,23 @@ Esta clase tiene como objetivo aplicar los conceptos vistos en el curso para la 
 \end{que}
 
 \begin{que}
-    Procese la imagen como se vio en la clase 3. Calibrela para obtener el coeficiente de backscatter, aplique los filtros correspondientes y proyectela en terreno utilizando un DEM. Exporte como imagen la vista obtenida en dB.
+    Procese la imagen como se realizó en la clase 3. Calíbrela para obtener el coeficiente de backscatter, aplique los filtros correspondientes y proyectela en terreno utilizando un DEM. Exporte la vista obtenida en dB.
 \end{que}
 
 \begin{que}
-    Identifique en la imagen cuerpos de agua, vegetados y ciudades. Mida su coeficiente de retrodispersión en las bandas VV y VH. Seleccione que polarización mejor separa zonas con y sin agua.
+    En la imagen, identifique cuerpos de agua, vegetación y ciudades. Mida su coeficiente de retrodispersión en las bandas VV y VH. Seleccione que polarización separa mejor las zonas con y sin agua.
 \end{que}
 
 \begin{que}
-    Utilizando la herramienta \menu{Analysis>Histogram} cálcule el histograma de la imagen e identifique un valor por debajo del cual el coeficiente de retrodispersión corresponde a agua.
+    Utilizando la herramienta \menu{Analysis>Histogram} calcule el histograma de la imagen e identifique un valor por debajo del cual, el coeficiente de retrodispersión corresponde a agua.
 \end{que}
 
 \begin{que}
-    Obtenga un mapa de zonas con agua. Para eso utilice la herramienta \menu{Band maths...} (Figura \ref{fig:bm}) que se obtiene haciendo click derecho sobre la imagen y la formula
+    Obtenga un mapa de zonas anegadas. Seleccione la herramienta \menu{Band maths...} (Figura \ref{fig:bm}) con click derecho sobre el nombre de la imagen e ingrese la formula
     \begin{center}
         \path{BANDA < T}
     \end{center}
-    donde T es el valor que obtuvo en el punto anterior.
+    donde T es el valor obtenido en el punto anterior.
     \begin{figure}[h!]
         \centering
         \includegraphics[scale=0.4]{fig:bm.png}
@@ -63,15 +63,14 @@ Esta clase tiene como objetivo aplicar los conceptos vistos en el curso para la 
 \end{que}
 
 \begin{que}
-    Exporte como KMZ el mapa obtenido.
+    Exporte el mapa como KMZ.
 \end{que}
 
 \begin{que}
     Repita el proceso para la imagen del 30 de septiembre de 2016
     \begin{center}
         \path{S1B_IW_GRDH_1SDV_20160930T090612_20160930T090637_002296_003E21_85E2}
-    \end{center}
-    del 30 de septiembre de 2016
+      
 \end{que}
 
 \begin{que}
