Se corrigen errores de compilacion y se compila para una lectura general.

--- a/Nivel2-B/Documentos/Guia/guia.tex
+++ b/Nivel2-B/Documentos/Guia/guia.tex
@@ -4,7 +4,14 @@
 \graphicspath{{./figs/}}
 
 \title{{\large Nivel 2} \\ Introducción a la teledetección SAR}
-\author{Tomas Zajc \and Francisco Nemiña \and Laura Rouco}
+\author[*]{Tomas Zajc}
+
+\author[**]{Francisco Nemiña\thanks{fnemina@conae.gov.ar}}
+\author[**]{Laura Rouco}
+
+\affil[*]{Productos SAOCOM \\ Comisión Nacional de Actividades Espaciales}
+\affil[**]{Unidad de Educación y Formación Masiva \\ Comisión Nacional de Actividades Espaciales}
+
 \begin{document}
 \frontmatter
 \maketitle
