--- a/Nivel2-B/Documentos/Guia/guia4.tex
+++ b/Nivel2-B/Documentos/Guia/guia4.tex
@@ -86,7 +86,7 @@ Observe los resultados haciendo click derecho sobre la imagen obtenida en la opc
 En la descomposición de Paulin:
 \begin{que}
     ¿De qué color  se observan:
-\begin{\begin{itemize}
+\begin{itemize}
   \item las zonas urbanas
   \item los bosques
   \item el agua
