--- a/Nivel2-B/Documentos/Guia/guia5.tex
+++ b/Nivel2-B/Documentos/Guia/guia5.tex
@@ -70,7 +70,7 @@ Esta clase tiene como objetivo aplicar los conceptos estudiados durante el curso
     Repita el proceso para la imagen del 30 de septiembre de 2016
     \begin{center}
         \path{S1B_IW_GRDH_1SDV_20160930T090612_20160930T090637_002296_003E21_85E2}
-      
+    \end{center}
 \end{que}
 
 \begin{que}
