--- a/Nivel2-B/Documentos/Guia/guia4.tex
+++ b/Nivel2-B/Documentos/Guia/guia4.tex
@@ -14,7 +14,7 @@ Abra la imagen \directory{ALPSRP278916070-L1.1.zip} que descargo del Alaska Sate
     \subfloat[I/O Parameters]{\includegraphics[width=0.35\textwidth]{fig:calibrar1.png}}
     \hfill
     \subfloat[Processing parameters]{\includegraphics[width=0.35\textwidth]{fig:calibrar3.png}}
-    \caption{}
+    \caption{Calibración de productos SAR utilizando el SNAP. Recuerde seleccionar marcar en este caso la opcíon \emph{Save as complex output}.}
     \label{fig:calibrar}
 \end{figure}
 
@@ -29,7 +29,7 @@ Seleccione la imagen \directory{ALOS-P1\_1\_\_A-ORBIT\_\_ALPSRP278916070\_Cal} y
     \subfloat[I/O Parameters]{\includegraphics[width=0.35\textwidth]{fig:t31.png}}
     \hfill
     \subfloat[Processing parameters]{\includegraphics[width=0.35\textwidth]{fig:t32.png}}
-    \caption{}
+    \caption{Cálculo de matrices polarimétricas en el SNAP.}
     \label{fig:t3}
 \end{figure}
 
@@ -42,7 +42,7 @@ En el caso de imágenes full polarimetricas se pueden aplicar distintos tipos de
     \subfloat[I/O Parameters]{\includegraphics[width=0.35\textwidth]{fig:plee1.png}}
     \hfill
     \subfloat[Processing parameters]{\includegraphics[width=0.35\textwidth]{fig:plee2.png}}
-    \caption{}
+    \caption{Filtro \emph{Refined Lee Filter} para imágenes full polarimétricas.}
     \label{fig:plee}
 \end{figure}
 
@@ -69,7 +69,7 @@ Obtenga la descomposición de Pauli usando la herramienta \menu{Radar>Polarimetr
     \subfloat[I/O Parameters]{\includegraphics[width=0.35\textwidth]{fig:pauli1.png}}
     \hfill
     \subfloat[Processing parameters]{\includegraphics[width=0.35\textwidth]{fig:pauli2.png}}
-    \caption{}
+    \caption{Cálculo de la descomposición de Pauli utilizando las matrices polarimétricas en el SNAP.}
     \label{fig:pauli}
 \end{figure}
 
@@ -78,7 +78,7 @@ Observe los resultados haciendo click derecho sobre la imagen obtenida en la opc
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.7\textwidth]{fig:pauli.jpg}
-    \caption{}
+    \caption{Descomposición de Pauli para la zona de interés.}
     \label{fig:pauli}
 \end{figure}
 
