--- a/Nivel2-B/Documentos/Guia/guia5.tex
+++ b/Nivel2-B/Documentos/Guia/guia5.tex
@@ -1,4 +1,4 @@
-\chapter{Detección de áreas inundadas}
+\chapter{Introducción a aplicaciones}
 
 Esta clase tiene como objetivo aplicar los conceptos estudiados durante el curso, para la detección se espejos de agua, utilizando imágenes \emph{Sentinel 1}. Se trabajrá con las inundaciones de octubre de 2017 en la zona de Chascomús, provincia de Buenos Aires, Argentina.
 
@@ -23,7 +23,7 @@ Esta clase tiene como objetivo aplicar los conceptos estudiados durante el curso
     \begin{figure}[h!]
         \centering
         \includegraphics[scale=0.4]{fig:coordenadas.png}
-        \caption{}
+        \caption{Subset espacial de una imagen en SNAP. Se reliza en este caso utilizando las coordenadas geográficas.}
         \label{fig:coordenadas}
     \end{figure}
     \begin{itemize}
@@ -57,7 +57,7 @@ Esta clase tiene como objetivo aplicar los conceptos estudiados durante el curso
     \begin{figure}[h!]
         \centering
         \includegraphics[scale=0.4]{fig:bm.png}
-        \caption{}
+        \caption{Álgebra de bandas en el SNAP.}
         \label{fig:bm}
     \end{figure}
 \end{que}
